Fixing z-index of blurContainer

--- a/components/GameOverModal/styles.module.css
+++ b/components/GameOverModal/styles.module.css
@@ -3,6 +3,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.4);
+    z-index: 2;
 }
 
 .container {
@@ -68,7 +69,7 @@
     background-color: #3aa394;
 }
 
-.victory .buttons button:hover{
+.victory .buttons button:hover {
     color: #3aa394;
 }
 
@@ -76,6 +77,6 @@
     background-color: #db4b4b;
 }
 
-.failed .buttons button:hover{
+.failed .buttons button:hover {
     color: #db4b4b;
 }
